0.8.0 - currently working on
- [#5031] Cleanup: Move Exception/ to Classes/Exception/
- [#5029] Cleanup: Move the TCA to Configuration/TCA/
- [#5030] Cleanup: Move locallang_db.xml to Resources/Private
- [#5041] Cleanup: Move the common constants file to Classes/
- [#5028] Cleanup: Move the icon to Resources/Public
- [#5020] Fix: Error message: The extension CSS Styled Content is not loaded
- [#5015] Change: Make oelib as compatible up to TYPO3 CMS 6.1.x
- [#5010] Fix: TestingFramework::loginFrontEndUser is slow on TYPO3 CMS 6.1
- [#5011] Fix: Test failure in Tx_Oelib_TemplateHelperTest in TYPO3 CMS 6.1
- [#5009] Fix: Test failure in Tx_Oelib_Model_CurrencyTest and Tx_Oelib_ViewHelper_PriceTest with static_info_tables 6
- [#5007] Change: Deprecate the Timer class
- [#4572] Fix: Add .htaccess to all folders with private resources
- [#3452] Change: Add the company name to ext_emconf.php
- [#4882] Change: Change the test extensions from T3X to folders
- [#4338] Change: Drop tx_oelib_salutationswitcher->altLLkey
- [#4748] Fix: Drop early __destruct calls
- [#4650] Change: Deprecate the ObjectFactory
- [#5000] Fix: Test failure in 6.1 due to changed XClass mechanism
- [#4718] Fix: Backport the TestingFramework 6.x compatibility changes from PHPUnit
- [#4717] Fix: 6.x compatibility: Backport the DbService changes from PHPUnit
- [#4998] Cleanup: Use type[] instead of array<type>
- [#4984] Feature: Add more setters to the FE user model
- [#4906] Fix: Test crash in Tx_Oelib_TemplateHelperTest in PHP 5.3
- [#4905] Fix: Add the encoding for all mb_* functions
- [#4873] Feature: Add Template.render()
- [#4874] Feature: Add DataMapper.getTableName
- [#4610] Fix: PHP/Apache crash/SIGSEV when running the unit tests on PHP 5.4
- [#4841] Cleanup: Drop the todo.txt file
- [#4830] Cleanup: Remove the closing PHP tags
- [#4789] Cleanup: Deprecate the static_info_tables extbase models and repositories
- [#4776] Cleanup: Replace "fixture" with "subject"