@@ -54,9 +54,9 @@ return array(
 	'tx_oelib_exception_database' => $extensionPath . 'Classes/Exception/Database.php',
 	'tx_oelib_exception_emptyqueryresult' => $extensionPath . 'Classes/Exception/EmptyQueryResult.php',
 	'tx_oelib_exception_notfound' => $extensionPath . 'Classes/Exception/NotFound.php',
-	'tx_oelib_geocoding_calculator' => $extensionPath . 'Geocoding/Calculator.php',
-	'tx_oelib_geocoding_dummy' => $extensionPath . 'Geocoding/Dummy.php',
-	'tx_oelib_geocoding_google' => $extensionPath . 'Geocoding/Google.php',
+	'tx_oelib_geocoding_calculator' => $extensionPath . 'Classes/Geocoding/Calculator.php',
+	'tx_oelib_geocoding_dummy' => $extensionPath . 'Classes/Geocoding/Dummy.php',
+	'tx_oelib_geocoding_google' => $extensionPath . 'Classes/Geocoding/Google.php',
 	'tx_oelib_interface_geocodinglookup' => $extensionPath . 'Interface/GeocodingLookup.php',
 	'tx_oelib_interface_identity' => $extensionPath . 'Interface/Identity.php',
 	'tx_oelib_interface_mappoint' => $extensionPath . 'Interface/MapPoint.php',
